# solana-raffle

raffle-contract/: Anchor.toml  package.json
raffle-contract/programs/raffle/: Cargo.toml
raffle-contract/programs/raffle/src/: account.rs  constants.rs  errors.rs  lib.rs
raffle-contract/tests/: raffle.ts
snuggle-raffle/: package.json  tailwind.config.js
snuggle-raffle/src/: App.css  App.js  index.css  index.js
snuggle-raffle/src/actions/: config.js
snuggle-raffle/src/components/: Buttons.js  DetailsCard.js  Footer.js  Header.js  RaffleCard.js  Table.js  TextField.js
snuggle-raffle/src/contract/: constants.js  helper.js  idl.json  keys.js  utils.js
snuggle-raffle/src/query/: auction.js  raffle.js
snuggle-raffle/src/routes/: index.js
snuggle-raffle/src/screens/AuctionForm/: index.js
snuggle-raffle/src/screens/Form/: index.js
snuggle-raffle/src/screens/Raffle Details/: index.js
snuggle-raffle/src/screens/Raffle List/: index.js
snuggle-raffle/src/screens/Staking/: index.js
